--- a/Maharastra.html
+++ b/Maharastra.html
@@ -40,7 +40,7 @@
        <li><a class="active" href="#">Destination</a>
             <ul class="dropdown">
                 <li><a href ="gujarat.html">Gujarat</a></li>
-                <li><a class="active" href ="maharastra.html">Maharashtra</a></li>
+                <li><a class="active" href ="Maharastra.html">Maharashtra</a></li>
                 <li><a href ="goa.html">Goa</a></li>
             </ul>
         </li>
