--- a/gujarat.html
+++ b/gujarat.html
@@ -37,7 +37,7 @@
        <li><a class="active" href="#">Destination</a>
             <ul class="dropdown">
                 <li><a class="active" href ="gujarat.html">Gujarat</a></li>
-                <li><a href ="maharastra.html">Maharashtra</a></li>
+                <li><a href ="Maharastra.html">Maharashtra</a></li>
                 <li><a href ="goa.html">Goa</a></li>
             </ul>
         </li>
