--- a/nature.html
+++ b/nature.html
@@ -39,7 +39,7 @@
                <li><a href="#">Destination</a>
                     <ul class="dropdown">
                         <li><a href ="gujarat.html">Gujarat</a></li>
-                        <li><a href ="maharastra.html">Maharashtra</a></li>
+                        <li><a href ="Maharastra.html">Maharashtra</a></li>
                         <li><a href ="goa.html">Goa</a></li>
                     </ul>
                 </li>
