--- a/goa.html
+++ b/goa.html
@@ -43,7 +43,7 @@
                <li><a class="active" href="#">Destination</a>
                     <ul class="dropdown">
                         <li><a href ="gujarat.html">Gujarat</a></li>
-                        <li><a href ="maharastra.html">Maharashtra</a></li>
+                        <li><a href ="Maharastra.html">Maharashtra</a></li>
                         <li><a class="active" href ="goa.html">Goa</a></li>
                     </ul>
                 </li>
